ui: media_resources: fix favourite button for media_resources in all views
js rewritten to do more correct things, like locking and updating the UI since we doing ajax stuff.

made it clearer that it handles 3 different buttons:
    - in (filter,media)set#show views, the top action bar button
    - in any media_resources box view
        - when in grid mode, overlay menu button
        - when in tile mode, more complicated overlay menu with 2 indicators

also, this is another ajax-only feature, this whole action bar should be be one or more forms.

[delivers #86020544]

---

commit 008fa1738cb59e1ab8cd52775c8a883ca365f2b0

    js: refactor favourite toggles, handle responses

    - rely on data properties for status
    - 'lock' and update the UI after success response

commit 2989862425cfa61cfccd3e3b69a76f0e806e7d49

    api: don't use NOCONTENT, work around ff bug

commit bb0ddee3d4e660cfdf55e256404eb3426ae8368c

    add 'data-is-fav' to all favourite toggles

--- a/app/assets/javascripts/views/media_resources/actions/favor.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/actions/favor.tmpl.haml
@@ -1,4 +1,5 @@
 %a{:"data-favor-toggle" => true,
+    :"data-is-fav" => "{{if is_favorite}}true{{else}}false{{/if}}",
      :title => "{{if is_favorite}}${_jed('Remove from favorites')}{{else}}${_jed('Add to favorites')}{{/if}}",
      :class => "ui-thumbnail-action-favorite{{if is_favorite}} active{{/if}}"}
   %i.icon-star-empty
