--- a/app/views/media_resources/_actions.html.haml
+++ b/app/views/media_resources/_actions.html.haml
@@ -8,6 +8,7 @@
         %i.icon-checkbox
     %li.ui-thumbnail-action
       %a.ui-thumbnail-action-favorite{:"data-favor-toggle" => true,
+                                      :"data-is-fav" => is_favorite ? "true" : "false",
                                       :title => _("Add to/remove from favorites"),
                                       :class => is_favorite ? "active" : ""}
         %i.icon-star-empty
