ui: implement tabbed-section (for ujs)
commit 680792643b1e4f2b226ccccb631101e6da38aed2
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 20:35:22 2015 +0100

    layout: base: fake ujs for styleguide

commit 78db37bb7dae76db481054f6531a5bfce8aa1ab2
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 20:34:40 2015 +0100

    css: ujs fixes

commit 2b0d1cbb002d62ebb5bca6869f175131e5923e41
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 19:42:19 2015 +0100

    css: add ujs helpers

commit 9f01acf1b8cf3eb1de1a5a73a4eb9450dfb0f681
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 19:41:08 2015 +0100

    css: home-claim: fix login padding

commit 7c21c599746943d87e552528d18086312be69f0a
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 19:13:46 2015 +0100

    css: home-claim: reduce classes with nesting

commit 60ab143af32da528f36bb3768c0233b6b32d49ef
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 20:46:47 2015 +0100

    ui: helper: fix/refactor classes_from_element(cfg)

commit a3f63883e25a38cd6675f4ac0393299e6996e243
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 20:36:00 2015 +0100

    add ujs combo 'tabbed-sections'

commit 85f300c1d20e6efc4713c1788f09ba8318710048
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 17:29:32 2015 +0100

    ui: 'home-claim' (simple version)

    needs a tab combo as well as JS!

commit fac8280d3211d1674820bb5c439ceb9e9f443c8c
Author: Max F. Albrecht <1@178.is>
Date:   Mon Feb 9 17:28:24 2015 +0100

    ui: helper: also handle all items inside 'list'

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,3 +1,30 @@
 @import colors
 @import config
 @import loader
+
+// ujs helpers
+
+.no-js
+  // default shown
+  html.has-js
+  // hide if has js
+  html.has-js &
+    @extend .hidden
+
+.js-only
+  // default hidden
+  @extend .hidden
+  // show if has js
+  html.has-js &
+    display: inherit !important
+
+
+// ujs fixes
+
+.tab-content
+  // show non-active tabs by default
+  html.no-js
+    // display: 
+  // with js tabs no padding is needed
+  html.has-js &
+    padding-bottom: 0
