--- a/app/views/layouts/_base.haml
+++ b/app/views/layouts/_base.haml
@@ -1,5 +1,8 @@
 !!!
-%html{lang: 'de-CH'}
+-# TODO: set 'has-js' with js.
+  its like this for now to not break the styleguide
+  while we don't use js.
+%html.has-js{lang: 'de-CH'}
   %head
     %meta{charset: 'utf-8'}
 
