--- a/app/views/_elements/components/tabs.haml
+++ b/app/views/_elements/components/tabs.haml
@@ -7,9 +7,11 @@
 %ul.ui-tabs{class: classes, id: id}
   - list.each do |tab_id, tab|
     - link = link_from_item(tab)
-    - classes = tab[:active] ? 'active' : ''
+    - tab[:classes].push(tab[:active] ? 'active' : '')
+    -# - binding.pry
 
-    %li.ui-tabs-item{class: classes, id: "#{id}-#{tab_id}"}
+
+    %li.ui-tabs-item{class: tab[:classes], id: "#{id}-#{tab_id}"}
 
       - if (link && (tab[:text] || tab[:icon]))
         - haml_tag('a', link) do
