Admin interface: vocabularies & vocables - admin can manage vocabularies - admin can delete a vocabulary - ability to manage vocables - ability to delete a vocable - vocable is searchable by a meta key - possibility to create a vocable

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -21,6 +21,7 @@
             = navbar_item 'Users', admin_users_path
             = navbar_item 'Groups', admin_groups_path
             = navbar_item 'Media Entries', admin_media_entries_path
+            = navbar_item 'Vocabularies', admin_vocabularies_path
             %li.dropdown
               %a.dropdown-toggle{href: '#', data: { toggle: 'dropdown' }}
                 %i.glyphicon.glyphicon-user
