Admin interface: media entries management panel
Squashed commit of the following:
- media file show view, previews list
- ability to delete a preview
- disable 'Recreate Thumbnails' button temporarily
- add ZencoderJobs section
- factory fix

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -27,6 +27,7 @@
               = navbar_item 'Sets', admin_collections_path
               = navbar_item 'Users', admin_users_path
               = navbar_item 'Groups', admin_groups_path
+              = navbar_item 'Media Entries', admin_media_entries_path
               %li
               %li.dropdown
                 %a.dropdown-toggle{href: '#', data: { toggle: 'dropdown' }}
