--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -1,13 +1,58 @@
 .ui-container.pal
-  = form_tag 'session/sign_in', id: 'login_form' do
-    = label_tag :login
-    = text_field_tag :login
 
-    = label_tag :password
-    = password_field_tag :password
+  - internal_login_form = capture_haml do
+    = form_tag 'session/sign_in', id: 'login_form' do
+      .form-body
+        .ui-form-group.rowed.compact
+          = text_field_tag :login, nil,
+            { placeholder: 'login', class: 'block large' }
+        .ui-form-group.rowed.compact
+          = text_field_tag :password, nil,
+            { placeholder: 'password',
+              type: 'password',
+              class: 'block large' }
+        .ui-form-group.rowed.compact
+          = component('button.primary', mods: ['large', 'block'],
+                                        type: 'submit') do
+            = "Anmelden"
 
-    = submit_tag 'submit'
+  - external_login_form = capture_haml do
+    %form
+      .form-body
+        .ui-form-group.rowed
+          %p.mbm
+            Alle Funktionen nutzen und auf
+            %br/
+            mehr Inhalte zugreifen.
+          = component('button.primary', mods: ['large', 'block'], href: '/login') do
+            = "Anmelden"
 
-  %br
-  = component('button.primary', href: '/login') do
-    = "ZHdK-Login"
+  :ruby
+    home_claim = {
+      claim: {
+        title: 'powerful global information system',
+        subtitle: 'academic information should be freely available to anyone.'
+      },
+      login: combo('tabbed-sections', {
+        mods: 'pitch-login',
+        list: {
+          external_login: {
+            active: true,
+            nav: {
+              mod: 'left',
+              text: 'ZHdK-Login'
+            },
+            content: external_login_form,
+          },
+          internal_login: {
+            nav: {
+              mod: 'right',
+              text: 'Externe'
+            },
+            content: internal_login_form,
+            }
+          }
+        })
+      }
+
+  = combo('home-claim', home_claim)
