--- a/app/views/_elements/components/tag-cloud.haml
+++ b/app/views/_elements/components/tag-cloud.haml
@@ -8,7 +8,7 @@
     else false
     end
 
-  # TODO: decide what is correct
+  # TODO: find out or decide what is correct
   icon_size = '-mini'
   # icon_size =
   #   case
@@ -19,9 +19,21 @@
 %ul.ui-tag-cloud{class: classes}
   - list.each do |item|
     %li.ui-tag-cloud-item
+      :ruby
+        item = { text: item } if item.is_a?(String)
+        next unless item.is_a?(Hash)
 
-      - html_tag_type = if item[:href].nil? then 'button' else 'a' end
-      - props = {class: 'ui-tag-button', href: item[:href], title: item[:title]}
+        html_tag_type = 'a'
+        props = {
+          class: ['ui-tag-button'],
+          href: item[:href],
+          title: item[:title]
+        }
+        if item[:href].nil?
+          html_tag_type = 'span'
+          props[:class].push('disabled')
+        end
+
       - haml_tag(html_tag_type, props) do
 
         - if icon_type
