--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -25,6 +25,7 @@
             %ul.nav.navbar-nav.navbar-right
               = navbar_item 'Dashboard', admin_root_path
               = navbar_item 'Sets', admin_collections_path
+              = navbar_item 'Filter Sets', admin_filter_sets_path
               = navbar_item 'Users', admin_users_path
               = navbar_item 'Groups', admin_groups_path
               = navbar_item 'Media Entries', admin_media_entries_path
