Admin interface: improve alerts & error handling
- remove :back redirects, rely on request param instead
- remove redirects in VocabulariesController on error
- rescue all ActiveRecord exceptions
- remove error redirects in the rest of admin controllers
- make alerts more flexible
- unify filters' buttons

--- a/app/views/admin/groups/_action_buttons.html.haml
+++ b/app/views/admin/groups/_action_buttons.html.haml
@@ -1,7 +1,7 @@
 = link_to edit_admin_group_path(group), class: "btn btn-info #{size} #{group.readonly? ? 'disabled' : ''}" do
   %i.glyphicon.glyphicon-edit
   Edit
-= link_to admin_group_path(group), method: :delete,
+= link_to admin_group_path(group, redirect_path: request.original_url), method: :delete,
     data: { confirm: 'Do you really want to delete this group?' },
     class: "btn btn-danger #{size} #{group.readonly? ? 'disabled' : ''}" do
   %i.glyphicon.glyphicon-trash
