--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -33,16 +33,9 @@
                     %i.glyphicon.glyphicon-file
                     Home/My
       #messages
-        - if success_message= flash[:success]
-          .alert.alert-success
-            %button.close{type:"button", 'data-dismiss'=>'alert'} &#215
-            = success_message
-        - if notice_message= flash[:notice]
-          .alert.alert-info
-            %button.close{type:"button", 'data-dismiss'=>"alert"} &#215
-            = notice_message
-        - if error_message= flash[:error]
-          .alert.alert-danger
-            %button.close{type:"button", 'data-dismiss'=>"alert"} &#215
-            = error_message
+        = alerts do |message_type, message, alert_type|
+          .alert.alert-dismissible{ class: "alert-#{alert_type}" }
+            = button_tag '&times;'.html_safe, class: 'close', data: { dismiss: 'alert' }
+            %strong #{message_type.capitalize}!
+            = message
       = yield
