--- a/app/assets/javascripts/views/permissions/line.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/line.tmpl.haml
@@ -37,10 +37,10 @@
         %option{data: {custom: true},disabled: :disabled} Angepasste Werte
       {{/if}}
 
-  {{tmpl({permission: view, label: "Betrachten", name: "view"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
+  {{tmpl({permission: view, label: "Get metadata and previews", name: "view"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
 
-  {{tmpl({permission: download, label: "Export original", name: "download"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
+  {{tmpl({permission: download, label: "Get full size", name: "download"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
 
   {{tmpl({permission: edit, label: "Edit metadata", name: "edit"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
 
-  {{tmpl({permission: manage, label: "Manage permissions", name: "manage"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
+  {{tmpl({permission: manage, label: "Edit permissions", name: "manage"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
