--- a/app/assets/javascripts/views/permissions/index.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/index.tmpl.haml
@@ -15,7 +15,7 @@
             %td.ui-rights-role-title  ${_jed('Permission')}
             %td.ui-rights-check-title ${_jed('Get metadata and previews')}
             %td.ui-rights-check-title ${_jed('Get full size')}
-            %td.ui-rights-check-title ${_jed('Edit metadata')}
+            %td.ui-rights-check-title ${_jed('Edit metadata and add to Set')}
             %td.ui-rights-check-title ${_jed('Edit permissions')}
 
         %tbody
