--- a/app/assets/javascripts/views/permissions/line.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/line.tmpl.haml
@@ -41,6 +41,6 @@
 
   {{tmpl({permission: download, label: "Get full size", name: "download"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
 
-  {{tmpl({permission: edit, label: "Edit metadata", name: "edit"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
+  {{tmpl({permission: edit, label: "Edit metadata and add to Set", name: "edit"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
 
   {{tmpl({permission: manage, label: "Edit permissions", name: "manage"}, {manageable: $item.manageable}) App.renderPath("permissions/line/right-check")}}
