Add settings to admin panel

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -17,6 +17,7 @@
               Madek Admin
           %ul.nav.navbar-nav.navbar-right
             = navbar_item 'Dashboard', admin_root_path
+            = navbar_item 'Settings', admin_app_settings_path
             = navbar_item 'Sets', admin_collections_path
             = navbar_item 'Filter Sets', admin_filter_sets_path
             = navbar_item 'Users', admin_users_path
