--- a/app/views/admin/previews/show.html.haml
+++ b/app/views/admin/previews/show.html.haml
@@ -3,21 +3,6 @@
 
 .row
   .col-xs-12
-    .panel.panel-default
-      .panel-body
-        .btn-group
-          = link_to admin_preview_path(@preview), method: :delete, class: 'btn btn-danger',
-            data: { confirm: 'Preview will be deleted. Do you want to proceed?' } do
-            %i.glyphicon.glyphicon-trash
-            Delete
-
-.row
-  .col-xs-4
-    .thumbnail
-      = image_tag @preview.file_path
-
-.row
-  .col-xs-12
     %table.table.table-striped
       %thead
       %tbody
@@ -26,3 +11,22 @@
             %td
               %strong= attr.first.humanize
             %td= attr.last
+
+%h2 Raw File
+
+.thumbnail
+  %img{src: admin_preview_raw_file_path(@preview)}
+
+%pre.text-center= @preview.filename
+
+%hr
+
+.row
+  .col-xs-12
+    .panel.panel-default
+      .panel-body
+        .btn-group.pull-right
+          = link_to admin_preview_path(@preview), method: :delete, class: 'btn btn-danger',
+            data: { confirm: 'Preview will be deleted. Do you want to proceed?' } do
+            %i.glyphicon.glyphicon-trash
+            Delete
