Add semver to footer (as simple string for now)

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,7 @@
       },
       text: 'Zürcher Hochschule der Künste and contributors'
     },
-    version: 'TODO: semver'
+    version: Settings.release.to_json
   }
 
 - content_for(:body) do
