--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,13 @@
       },
       text: 'Zürcher Hochschule der Künste and contributors'
     },
-    version: Settings.release.to_json
+    version: deco('semver', prefix: 'v', version: {
+      major: Settings.release.version_major,
+      minor: Settings.release.version_minor,
+      patch: Settings.release.version_patch,
+      pre: Settings.release.version_pre,
+      build: Settings.release.version_build
+    })
   }
 
 - content_for(:body) do
