ui: layout: app: always wrap in .app-body

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -25,7 +25,8 @@
 
       = render('application/app_alerts')
 
-      = yield
+      .app-body
+        = yield
 
       .app-footer-push
   = combo('footer', footer)
